_sass/_layout.scss
/* ... */
.post-meta {
    font-size: $small-font-size;
    color: $grey-color;
}

.post-link {
    display: block;
    font-size: 24px;
}

.post-item {
    text-align: center;
    line-height: 0;
    display: block;
    margin-top: $tile-size-large / 2;
    @include media-query($on-palm) {
        margin-top: $tile-size / 2;
    }    
}


/********************
 * Posts
 *******************/

.post-header {
    margin-bottom: $spacing-unit / 2;
    min-height: 3em;
}

.post-title {
    font-size: 26px;
    //letter-spacing: -1px;
    line-height: 1;

    @include media-query($on-laptop) {
        font-size: 22px;
    }
}

.post-title-episode {
    .post-header-stop-id {
        color: #ffffff;
        display: inline-block;
        font-size: 20px;
        line-height: 20px;
        text-align: center;
        vertical-align: center;
        border-radius: $tile-border-radius;
        margin: 0 auto;
        background-color: $tile-bgcolor-bright;
        background-size: 100%;
        color: $tile-color;
        width: $tile-size-large;
        height: $tile-size-large;
        span {
            text-align: center;
            line-height: 0;
            display: inline-block;
            margin-top: $tile-size-large / 2;
        }
        
    }
    .post-header-section-title {
        //color: lighten($brand-color, 20%);
        display: inline-block;
        // color: lighten($brand-color, 50%);
        color: #FFFFFF;
        font-size: 20px;
        line-height: 20px;
        margin-top: 0;
        margin-bottom: 0.25em;
        text-align: center;
    }
    .post-header-title {
        // color: lighten($brand-color, 10%);
        color: #FFFFFF;
        font-size: 24px;
        line-height: 28px;
        margin-top: 0;
        margin-bottom: 0;
        text-align: center;
        padding-top: 0.5em;
        // border-top: 1px solid $background-hr;
        border-top: 2px solid $brand-color;
        text-align: left;
    }
    padding-bottom: 0.5em;
    // border-bottom: 1px solid $background-hr;
}

.post-content {
    //margin-bottom: $spacing-unit;
    margin-bottom: 106px;

    h2 {
        font-size: 26px;

        @include media-query($on-laptop) {
            font-size: 22px;
        }
    }

    h3 {
        font-size: 20px;
        color: lighten($brand-color, 10%);

        @include media-query($on-laptop) {
            //font-size: 18px;
        }
    }

    h4 {
        font-size: 18px;

        @include media-query($on-laptop) {
            font-size: 16px;
        }
    }
    .credit-title {
        color: darken($text-color, 20%);
        @include media-query($on-palm) {
            display: block;
        }
    }
    .hidden-mobile {
        @include media-query($on-palm) {
            display: none;
        }
    }
}

/*********************************************
Hero images on audio guide stop pages
*********************************************/

.post-hero-image-container {
    margin-bottom: 0.5em;
    background-color: $hero-image-bg;
    border-radius: 5px;
}

.post-hero-image {
    width: 100%;
    //max-height: 300px;
    padding: 0 0;
    margin: 0 auto 0 auto;
    //height: 150px;
    //background-color: $background-darker;
    text-align: center;

    img {
        width: 100%;
        max-width: 512px;
        height: auto;
        display: inline-block;
    }
}

.slick-post-hero-image button.slick-arrow {
    opacity: 0.3;
    @include media-query($on-laptop) {
        display: none !important;
    }
}

/*********************************************
Audio Player Styling
*********************************************/

.jp-audio {
    position: relative;
}

.audio-footer-container {
    // background-color: darken($player-audio-footer-bg, 35%);
    background-color: darken($brand-color, 20%);
    bottom: 0;
    left: 0;
    right: 0;
    box-sizing: border-box;
    width: 100%;
}


.audio-player {
    padding: 0 0.25em;
    background: none;
    margin-left: auto;
    margin-right: auto;
    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));

}

.player-now-playing {
    display: block;
    font-size: $player-now-playing-size;
    line-height: $player-now-playing-size;
    //height: $player-now-playing-size * 3;
    //height: auto;
    margin-top: 0;
    margin-bottom: 0;
    padding: 0;
    text-align: center;
    p {
        padding-top: $player-now-playing-size / 2;
        padding-bottom: $player-now-playing-size / 2;;
        margin-bottom: 0;
    }
}
/* ... */

